<resources>
    <string name="app_name">Capstone</string>
    <string name="REGISTER">REGISTER</string>
    <string name="enternumber">Please Enter Your Number</string>
    <string name="hint">+63-</string>
    <string name="Submit">SUBMIT</string>
    <string name="exist">Already have an account? Click here</string>
    <string name="numbers">9123456789</string>
    <string name="resend">RESEND OTP</string>
    <string name="OTP">OTP VERIFICATION</string>
</resources>