<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/marikina" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/REGISTER"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/enternumber"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/hint"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/InputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/numbers"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@android:color/background_light"/>

        <Button
            android:id="@+id/OTPSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:textStyle="bold"
            android:text="@string/Submit"
            android:textSize="16sp"/>

        <Button
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="200dp"
            android:text="@string/exist"
            android:background="@android:color/transparent"
            android:textSize="14sp"
            android:textStyle="italic"/>

    </LinearLayout>
</ScrollView>
